--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "typedoc": "^0.24.8",
     "typescript": "^5.1.6",
     "vite": "^6.2.4",
+    "vite-bundle-analyzer": "^0.18.1",
     "vite-plugin-dts": "^4.5.3",
     "vite-tsconfig-paths": "^5.1.4"
   },
